@@ -83,6 +83,7 @@ fi
 # host-specific stuff:
 
 AC_PROG_CC
+AC_GNU_SOURCE
 AC_PROG_INSTALL
 
 ALL_LINGUAS="fr sv tr es da vi zh_CN zh_TW ga fi"
