@@ -1,3 +1,12 @@
+2007-10-24  Alan Modra  <amodra@bigpond.net.au>
+
+	* Makefile.am (INCLUDES): Remove -D_GNU_SOURCE.
+	* configure.in: Invoke AC_GNU_SOURCE.
+	* Makefile.in: Regenerate.
+	* config.in: Regenerate.
+	* configure: Regenerate.
+	* po/POTFILES.in: Regenerate.
+
 2007-10-19  Nick Clifton  <nickc@redhat.com>
 
 	* configure.tgt: Add support for am34-linux-gnu target.
